--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Final Assessment - Jayesh Agrawal</h1>
+<div class="container">
+    <div class="box">
+        <div class="cont1 a"></div>
+        <div class="cont1 b">
+            <br>
+            <br>
+            <form action="#" method="post">
+                <label for="name">Name:</label>
+                <input type="text" name="" id="name">
+                <br><br>
+                <label for="email">Email:</label>
+                <input type="email" name="" id="email">
+            </form>
+        </div>
+    </div>
+    <div class="box">
+        <div class="cont2 a">1</div>
+        <div class="cont2 b">2</div>
+        <div class="cont2 c">3</div>
+    </div>
+    <div class="box">
+        <div class="cont3 a"></div>
+        <div class="cont3 b"></div>
+        <div class="cont3 c"></div>
+        <div class="cont3 d"></div>
+    </div>
+
+    <a href="#"><div class="top">
+        Go to Top
+    </div></a>
+</div>
 </body>
 </html>
